tests/ui/reborrow/coerce-shared-omitted-reborrow-field-locked.stderr
error: implementing `CoerceShared` currently requires source and target to have at most one non-ZST reborrow data field
  --> $DIR/coerce-shared-omitted-reborrow-field-locked.rs:30:1
   |
LL | impl<'a, T> CoerceShared<OmitRef<'a, T>> for OmitMut<'a, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^--------------^^^^^^--------------^^^
   | |                        |                   |
   | |                        |                   source type has 2 non-ZST reborrow data fields
   | |                        target type has 1 non-ZST reborrow data fields
   | in this `CoerceShared` implementation
   |
   = note: this is a temporary restriction until `CoerceShared` lowering supports non-trivially memcpy-compatible field layouts

error[E0506]: cannot assign to `*wrapped.extra.value` because it is borrowed
  --> $DIR/coerce-shared-omitted-reborrow-field-locked.rs:49:5
   |
LL |     let shared = get(wrapped);
   |                      ------- `*wrapped.extra.value` is borrowed here
LL |
LL |     *wrapped.extra.value = 3;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     `*wrapped.extra.value` is assigned to here but it was already borrowed
   |     borrow later used here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0506`.
